; ModuleID = '/home/carl/AnghaBench/php-src/sapi/fpm/fpm/extr_zlog.c_zlog_print_time.c'
source_filename = "/home/carl/AnghaBench/php-src/sapi/fpm/fpm/extr_zlog.c_zlog_print_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i64, i32 }
%struct.tm = type { i32 }

@.str = private unnamed_addr constant [19 x i8] c"[%d-%b-%Y %H:%M:%S\00", align 1
@zlog_level = common dso_local global i64 0, align 8
@ZLOG_DEBUG = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [6 x i8] c".%06d\00", align 1
@.str.2 = private unnamed_addr constant [3 x i8] c"] \00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @zlog_print_time(%struct.timeval* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.timeval*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.tm, align 4
  %8 = alloca i64, align 8
  store %struct.timeval* %0, %struct.timeval** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = load i64, i64* %6, align 8
  %11 = load %struct.timeval*, %struct.timeval** %4, align 8
  %12 = getelementptr inbounds %struct.timeval, %struct.timeval* %11, i32 0, i32 1
  %13 = call i32 @localtime_r(i32* %12, %struct.tm* %7)
  %14 = call i64 @strftime(i8* %9, i64 %10, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i32 %13)
  store i64 %14, i64* %8, align 8
  %15 = load i64, i64* @zlog_level, align 8
  %16 = load i64, i64* @ZLOG_DEBUG, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %32

18:                                               ; preds = %3
  %19 = load i8*, i8** %5, align 8
  %20 = load i64, i64* %8, align 8
  %21 = getelementptr inbounds i8, i8* %19, i64 %20
  %22 = load i64, i64* %6, align 8
  %23 = load i64, i64* %8, align 8
  %24 = sub i64 %22, %23
  %25 = load %struct.timeval*, %struct.timeval** %4, align 8
  %26 = getelementptr inbounds %struct.timeval, %struct.timeval* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = trunc i64 %27 to i32
  %29 = call i64 (i8*, i64, i8*, ...) @snprintf(i8* %21, i64 %24, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i32 %28)
  %30 = load i64, i64* %8, align 8
  %31 = add i64 %30, %29
  store i64 %31, i64* %8, align 8
  br label %32

32:                                               ; preds = %18, %3
  %33 = load i8*, i8** %5, align 8
  %34 = load i64, i64* %8, align 8
  %35 = getelementptr inbounds i8, i8* %33, i64 %34
  %36 = load i64, i64* %6, align 8
  %37 = load i64, i64* %8, align 8
  %38 = sub i64 %36, %37
  %39 = call i64 (i8*, i64, i8*, ...) @snprintf(i8* %35, i64 %38, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.2, i64 0, i64 0))
  %40 = load i64, i64* %8, align 8
  %41 = add i64 %40, %39
  store i64 %41, i64* %8, align 8
  %42 = load i64, i64* %8, align 8
  ret i64 %42
}

declare dso_local i64 @strftime(i8*, i64, i8*, i32) #1

declare dso_local i32 @localtime_r(i32*, %struct.tm*) #1

declare dso_local i64 @snprintf(i8*, i64, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
